--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<br>
 	<br>
-	<a href="posts/i_can_see_you.html">i can see you from this mountain (june 20th, 2019)</a>
+	<a href="posts/i_can_see_you.html">the mountain (june 20th, 2019)</a>
 	<br>
 	<br>
 	<br>
